
0.10.2m Jan  08, 2012
 * strip whitespace from url before parsing from slapt-getrc

0.10.2l Oct  08, 2011
 * added dep, conflicts, and reverse dep unit tests
 * Do not return 1 from slapt_get_pkg_dependencies if no dependency information
 * fixed reverse dep lookup to make sure the match is exact
 * only create directory structure if chdir succeeded
 * remove inclusion of deprecated curl/types.h
 * explicitly link in libcrypto
 * bumped version to 0.10.2l
 * Fix resource leaks on error paths
 * Fix typo

0.10.2k Sep  04, 2011
 * tighten up the package name regexen
 * updated translation building, russian translation from Igor

0.10.2j Jul  15, 2011
 * updated --help output (inspired by Igor's slapt-src suggestions)
 * make sure to remove the conflict's dependencies as well as the conflict
 * Updated regex for reading /var/log/packages compressed and uncompressed sizes
 * free regex and installed package list in slapt_pkg_action_filelist
 * updating unit tests
 * updated italian translation from Stefano Ansaloni
 * moved --version logout prior to reading config file
 * fixed commented out extra etc examples for 13.37
 * remove specific version in slack-desc
 * silence chdir return warning

0.10.2i Apr  27, 2011
 * set default example sources to 13.37
 * update working direction creation to account for N path depth
 * libassuan is now required via libgpgme
 * updated it translation from Stefano Ansaloni

0.10.2h Feb  15, 2011
 * fix parse_meta_tag() to match '+' in package name
 * hungarian translation by Peter Polonkai
 * updated ru translation from Igor Murzov
 * updated es_ES translation from Angelos

0.10.2g Sept 27, 2010
 * api cleanup, typedef'd old structs
 * updated el translation from George Vlahavas
 * updated pt_TR translation from Sérgio Surkam
 * updated fr translation from Verachten Bruno
 * updated es translation, new es_AR translation from Fernando Velo 
 * added slapt_download_data to public API
 * translation changes by Igor Murzov
